plugin.video.philizz.media

--- a/plugin.video.philizz.media/changelog.txt
+++ b/plugin.video.philizz.media/changelog.txt
@@ -1,3 +1,4 @@
+2.1 - Changed TXT File
 2.0 - Add-on reprogrammed 
 --------------------------------------------------------------------------
 1.0.5 - Decademixes Section added
