--- a/plugin.video.philizz.media/changelog.txt
+++ b/plugin.video.philizz.media/changelog.txt
@@ -1,3 +1,4 @@
+2.2 - Yearmix 2020
 2.1 - Changed TXT File
 2.0 - Add-on reprogrammed 
 --------------------------------------------------------------------------
